--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>TheBorzz Barbershop</title>
     
     <!-- Preconnect to API server -->
-    <link rel="preconnect" href="http://localhost:5005" crossorigin />
+    <link rel="preconnect" href="https://barberbooking-production.up.railway.app" crossorigin />
     
     <!-- Preload critical assets -->
     <link rel="preload" href="/src/frontend/assets/hatchet.png" as="image" />
