--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -36,14 +36,18 @@
         return false;
       };
 
-      // Log environment variables (without sensitive data)
-      console.log('Environment variables:', {
-        VITE_API_URL: import.meta.env.VITE_API_URL || 'Not set'
-      });
+      // We'll log environment variables in a separate module script
     </script>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="./main.jsx"></script>
+    <!-- Module script for environment variables -->
+    <script type="module">
+      // Log environment variables (without sensitive data)
+      console.log('Environment variables:', {
+        VITE_API_URL: import.meta.env.VITE_API_URL || 'Not set'
+      });
+    </script>
   </body>
 </html> 
